tests/negative/syntax_errors/005_double_semicolon_decl.c
// TEST: unclosed_string
// DESCRIPTION: Unterminated string literal should fail
// EXPECT_COMPILE_FAIL: yes
// ERROR_PATTERN: unterminated string
// PHASE: 1

int main(void) {
    char *s = "hello;
    return 0;
}
